--- a/src/app/features/auth/pages/login-page/login-page.component.scss
+++ b/src/app/features/auth/pages/login-page/login-page.component.scss
@@ -261,7 +261,7 @@
 }
 
 .login-page__social--apple {
-  background: var(--ui-color-background);
+  background: var(--ui-color-canvas-dark);
   color: var(--ui-color-on-primary);
 }
 
