--- a/src/app/features/auth/pages/register-page/register-page.component.scss
+++ b/src/app/features/auth/pages/register-page/register-page.component.scss
@@ -268,7 +268,7 @@
 }
 
 .register-page__social--apple {
-  background: var(--ui-color-background);
+  background: var(--ui-color-canvas-dark);
   color: var(--ui-color-on-primary);
 }
 
